# get-papers-list

./: .gitignore  README.md  build-and-test.yml  cli.py  pyproject.toml
.github/workflows/: build-and-test.yml  main-work-flow.yml
get_papers_list/: csv_writer.py  paper_filter.py  pubmed_client.py
tests/: test_pubmed_client.py
