[tool.poetry]
name = "get-papers-list"
version = "0.1.1"
description = "A Python program to fetch and filter research papers from PubMed."
authors = ["Srinivas Sarkar <srinivassarkar07@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
pandas = "^2.0.3"
lxml = "^4.9.3"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"